Fix text align in footer

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -123,3 +123,7 @@ figure.responsive-image {
         text-align: center;
     }
 }
+
+.left-text {
+    text-align: left;
+}
